--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,4 +1,4 @@
-reportportal.url=http://localhost:8080
+reportportal.url=https://reportportal.io/
 reportportal.api.url=http://localhost:8080/api/v1
 reportportal.api.username=default
 reportportal.api.password=default
